# h10_sim

./: README.md
h10_sim/: ros_gz_bridge.yaml
h10_sim/control/: package.xml  setup.py
h10_sim/control/control/: imu_sub.py
h10_sim/control/controls_movement/: setup.cfg  setup.py
h10_sim/control/controls_movement/controls_movement/: imu_sub.py  pool_test_2.py
h10_sim/control/launch_files/: pool_test.launch.py
h10_sim/gazebo/: CMakeLists.txt  auv_properties.csv  package.xml
h10_sim/gazebo/hooks/: hook.dsv.in
h10_sim/gazebo/models/dynamics/: model.sdf
h10_sim/gazebo/models/geometry/: model.sdf
h10_sim/gazebo/models/geometry/meshes/: master assembly.SLDASM
h10_sim/gazebo/worlds/: h10pool.sdf
h10_sim/install/: local_setup.sh  setup.sh  setup_custom.bash
h10_sim/install/control/lib/control/: IMU
h10_sim/install/control/share/control/: package.sh
h10_sim/install/controls_movement/lib/controls_movement/: IMU  IMU -  moveBack  moveDown  moveFront  moveLeft  moveRight  moveUp
h10_sim/install/controls_movement/share/controls_movement/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  thrust_map.csv
h10_sim/install/gazebo_camera_bridge/share/gazebo_camera_bridge/: package.bash  package.zsh
h10_sim/install/share/simple_auv/models/auv/: model.config  model.sdf
h10_sim/install/share/simple_auv/worlds/: h10pool.sdf
h10_sim/install/simple_auv/: custom_setup.sh  local_setup.bash
h10_sim/install/simple_auv/share/simple_auv/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
h10_sim/log/: latest_build
(+6 files in other folders)
