<?xml version="1.0"?>
<package format="2">
  <name>simple_auv</name>
  <version>0.0.1</version>
  <description>A simple AUV package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
